cmake_minimum_required(VERSION 3.16)

#Android Auto Projection Protocol Library
project(aap_protobuf)
message(STATUS "AASDK ProtoBuf Library")

# Use versioning from parent project if available, otherwise use defaults
if(DEFINED LIBRARY_BUILD_MAJOR_RELEASE AND DEFINED LIBRARY_BUILD_MINOR_RELEASE AND DEFINED LIBRARY_BUILD_PATCH_RELEASE)
    # Use parent project versioning
    set(AAP_VERSION_MAJOR ${LIBRARY_BUILD_MAJOR_RELEASE})
    set(AAP_VERSION_MINOR ${LIBRARY_BUILD_MINOR_RELEASE}) 
    set(AAP_VERSION_PATCH ${LIBRARY_BUILD_PATCH_RELEASE})
    
    # Use parent project's version string if available
    if(DEFINED LIBRARY_VERSION_STRING)
        set(LIBRARY_BUILD_VERSION_STRING ${LIBRARY_VERSION_STRING})
    else()
        set(LIBRARY_BUILD_VERSION_STRING "${AAP_VERSION_MAJOR}.${AAP_VERSION_MINOR}.${AAP_VERSION_PATCH}")
    endif()
else()
    # Fallback to original versioning for standalone builds
    set(LIBRARY_BUILD_DATE "20241121")    # Binary Release Build Date
    set(LIBRARY_BUILD_MAJOR_RELEASE 4)        # Binary Release Build Number (increment if released on same day)
    set(LIBRARY_BUILD_MINOR_RELEASE 0)        # Binary Release Build Number (increment if released on same day)
    set(LIBRARY_BUILD_INCREMENTAL 0)    # Binary Build Version - Increment for Each Build
    set(LIBRARY_BUILD_VERSION_STRING "${LIBRARY_BUILD_MAJOR_RELEASE}.${LIBRARY_BUILD_MINOR_RELEASE}.${LIBRARY_BUILD_INCREMENTAL}+${LIBRARY_BUILD_DATE}")
endif()
set(AAP_PROTO_VERSION 1.6)          # Underlying AAP (Android Auto Projection Library Protocol)

set(CMAKE_CXX_STANDARD 20)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Default to Release mode unless overridden with -DCMAKE_BUILD_TYPE=Debug on cmake command
if(NOT CMAKE_BUILD_TYPE)
    message(STATUS "Forcing Release build type")
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build." FORCE)
    # Set the possible values of build type for cmake-gui
    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
endif()

# Use FetchContent to build Protobuf v30.0 with C++20 support, unless using system protobuf
if(NOT SKIP_BUILD_PROTOBUF)
    message(STATUS "Using FetchContent to download and build Protobuf v30.0")
    include(FetchContent)
else()
    message(STATUS "Using system protobuf for aap_protobuf generation")
    find_package(Protobuf REQUIRED)
endif()

# Fetch Abseil (required by Protobuf v22.0+) unless skipping
if(NOT SKIP_BUILD_ABSL AND NOT SKIP_BUILD_PROTOBUF)
    FetchContent_Declare(
      abseil
      GIT_REPOSITORY https://github.com/abseil/abseil-cpp.git
      GIT_TAG 20240722.0  # LTS 2024-07-22, compatible with Protobuf v30.0
      GIT_SHALLOW TRUE
    )

    # Save current compiler flags to restore later
    set(SAVED_CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")

    # Remove -pedantic from flags for external dependencies (Abseil, Protobuf)
    # These external libraries may have valid code that triggers pedantic warnings
    string(REPLACE " -pedantic" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
    message(STATUS "Temporarily disabled -pedantic flag for external dependency compilation")

    set(ABSL_PROPAGATE_CXX_STD ON CACHE BOOL "" FORCE)
    set(ABSL_BUILD_TESTING OFF CACHE BOOL "" FORCE)
    message(STATUS "Fetching Abseil LTS 2024-07-22...")
    FetchContent_MakeAvailable(abseil)
else()
    if(NOT SKIP_BUILD_PROTOBUF)
        message(STATUS "Skipping Abseil build, using system-installed version")
        find_package(absl REQUIRED)
    else()
        message(STATUS "Using system protobuf - Abseil not needed for generation")
    endif()
endif()

# Fetch Protobuf v30.0 or use system protobuf
if(NOT SKIP_BUILD_PROTOBUF)
    FetchContent_Declare(
      protobuf
      GIT_REPOSITORY https://github.com/protocolbuffers/protobuf.git
      GIT_TAG v30.0
      GIT_SHALLOW TRUE
    )
    set(protobuf_BUILD_TESTS OFF CACHE BOOL "" FORCE)
    set(protobuf_ABSL_PROVIDER "package" CACHE STRING "" FORCE)
    set(protobuf_BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
    set(protobuf_INSTALL OFF CACHE BOOL "" FORCE)
    message(STATUS "Fetching Protobuf v30.0...")

    # Make protobuf available - this will configure and build it
    FetchContent_MakeAvailable(protobuf)
else()
    message(STATUS "Using system protobuf for aap_protobuf generation")
endif()

# Set protobuf_BIN_DIR and protoc executable based on whether we're building protobuf or using system
if(NOT SKIP_BUILD_PROTOBUF)
    # Use the built protoc from FetchContent
    set(PROTOBUF_PROTOC_EXECUTABLE "${protobuf_BINARY_DIR}/protoc")
    message(STATUS "Using protoc from FetchContent: ${PROTOBUF_PROTOC_EXECUTABLE}")
else()
    # Use system protoc
    find_program(PROTOBUF_PROTOC_EXECUTABLE protoc REQUIRED)
    message(STATUS "Using system protoc: ${PROTOBUF_PROTOC_EXECUTABLE}")
endif()

# Include protobuf generate functions
if(NOT SKIP_BUILD_PROTOBUF)
    if(NOT COMMAND protobuf_generate)
        include(${protobuf_SOURCE_DIR}/cmake/protobuf-generate.cmake)
    endif()
else()
    # For system protobuf, use the standard CMake protobuf_generate
    include(FindProtobuf)
endif()

# Locate all proto files
file(GLOB_RECURSE PROTO_FILES ${CMAKE_CURRENT_SOURCE_DIR}/aap_protobuf/*.proto)

# Create the library first with proto files as sources
if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")  # macOS
    message(NOTICE "Configuring STATIC Library for MacOS")
    add_library(aap_protobuf STATIC ${PROTO_FILES})
else()
    message(NOTICE "Configuring SHARED Library")
    add_library(aap_protobuf SHARED ${PROTO_FILES})
endif()

# Use the modern protobuf_generate function
protobuf_generate(
    TARGET aap_protobuf
    IMPORT_DIRS ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/aap_protobuf
)

# Link against protobuf library
if(NOT SKIP_BUILD_PROTOBUF)
    # Link against the built protobuf library
    target_link_libraries(aap_protobuf PRIVATE protobuf::libprotobuf)
    target_include_directories(aap_protobuf PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/aap_protobuf>
        $<BUILD_INTERFACE:${protobuf_SOURCE_DIR}/src>
        $<INSTALL_INTERFACE:include/aap_protobuf>
    )
else()
    # Link against system protobuf
    target_link_libraries(aap_protobuf PRIVATE ${Protobuf_LIBRARIES})
    target_include_directories(aap_protobuf PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/aap_protobuf>
        $<INSTALL_INTERFACE:include/aap_protobuf>
    )
endif()

set(LIBRARY_BUILD_VERSION_STRING "${LIBRARY_BUILD_MAJOR_RELEASE}.${LIBRARY_BUILD_MINOR_RELEASE}.${LIBRARY_BUILD_INCREMENTAL}+${LIBRARY_BUILD_DATE}")
message(STATUS "aap_protobuf Project Version: ${LIBRARY_BUILD_VERSION_STRING}")

# Set version properties
if(DEFINED LIBRARY_BUILD_MAJOR_RELEASE)
    set_target_properties(aap_protobuf
            PROPERTIES
            VERSION ${LIBRARY_BUILD_VERSION_STRING}
            SOVERSION ${LIBRARY_BUILD_MAJOR_RELEASE})
else()
    set_target_properties(aap_protobuf
            PROPERTIES
            VERSION ${LIBRARY_BUILD_VERSION_STRING}
            SOVERSION 4)
endif()

# Install rules with component assignment for packaging
install(TARGETS aap_protobuf
        EXPORT aap_protobufTargets
        LIBRARY DESTINATION lib COMPONENT runtime
        ARCHIVE DESTINATION lib COMPONENT runtime
        RUNTIME DESTINATION bin COMPONENT runtime
        INCLUDES DESTINATION include
)

target_include_directories(aap_protobuf
        PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
        $<INSTALL_INTERFACE:include/aap_protobuf>
)

# Install headers explicitly with component assignment
install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/aap_protobuf
        DESTINATION include
        COMPONENT development
        FILES_MATCHING PATTERN "*.h")

# Export the targets to a script
install(EXPORT aap_protobufTargets
        FILE aap_protobufTargets.cmake
        NAMESPACE AAPProto::
        DESTINATION lib/cmake/aap_protobuf
        COMPONENT development
)

# Create a Config file for FindPackage
include(CMakePackageConfigHelpers)
write_basic_package_version_file(
        "${CMAKE_CURRENT_BINARY_DIR}/aap_protobufConfigVersion.cmake"
        VERSION 1.0
        COMPATIBILITY AnyNewerVersion
)

configure_package_config_file(Config.cmake.in
        "${CMAKE_CURRENT_BINARY_DIR}/aap_protobufConfig.cmake"
        INSTALL_DESTINATION lib/cmake/aap_protobuf
)

# Install the config files
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/aap_protobufConfigVersion.cmake"
        "${CMAKE_CURRENT_BINARY_DIR}/aap_protobufConfig.cmake"
        DESTINATION lib/cmake/aap_protobuf
        COMPONENT development)


